force-app/main/default/objects/Lead/fields/AgencyCode__c.field-meta.xml
<CustomField>
    <fullName>AgencyCode__c</fullName>
    <label>Codice Agenzia</label>
    <length>30</length>
    <type>Text</type>
</CustomField>