force-app/main/default/objects/Lead/fields/AtecoDescription__c.field-meta.xml
<CustomField>
    <fullName>AtecoDescription__c</fullName>
    <label>Descrizione Ateco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>