force-app/main/default/objects/Lead/fields/Birthcity__c.field-meta.xml
<CustomField>
    <fullName>Birthcity__c</fullName>
    <label>Comune di Nascita</label>
    <length>100</length>
    <type>Text</type>
</CustomField>