force-app/main/default/objects/Lead/fields/CampaignSource__c.field-meta.xml
<CustomField>
    <fullName>CampaignSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>campo tecnico popolato dall’integrazione con Biz in cui viene inserito l’ID della Campagna Mkt cloud che ha portato il Lead ha compilare il form-web</description>
    <label>Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>