force-app/main/default/objects/Lead/fields/CityCode__c.field-meta.xml
<CustomField>
    <fullName>CityCode__c</fullName>
    <label>Codice ISTAT [Residenziale/Sede Legale]</label>
    <length>6</length>
    <type>Text</type>
</CustomField>