force-app/main/default/objects/Lead/fields/CollectionAgency__c.field-meta.xml
<CustomField>
    <fullName>CollectionAgency__c</fullName>
    <description>Utilizzati per import liste Lead</description>
    <label>Raccolto da Agenzia</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>