force-app/main/default/objects/Lead/fields/CollectionOperator__c.field-meta.xml
<CustomField>
    <fullName>CollectionOperator__c</fullName>
    <description>Utilizzati per import liste Lead</description>
    <label>Raccolto da Operatore</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>