force-app/main/default/objects/Lead/fields/Consenso_IBM_Unica__c.field-meta.xml
<CustomField>
    <fullName>Consenso_IBM_Unica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consenso IBM Unica</label>
    <type>Checkbox</type>
</CustomField>