force-app/main/default/objects/Lead/fields/consumption__c.field-meta.xml
<CustomField>
    <fullName>consumption__c</fullName>
    <label>Consumi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOHO: EE&lt;50.000 | gas&lt;10.000</fullName>
            </value>
            <value>
                <fullName>SMALL: EE&lt;300.000 | gas&lt;50.000</fullName>
            </value>
            <value>
                <fullName>MEDIUM: EE&lt; 5GWh | gas&lt;1mln</fullName>
            </value>
            <value>
                <fullName>TOP: oltre i valori del MEDIUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>