force-app/main/default/objects/Lead/fields/ContactDate__c.field-meta.xml
<CustomField>
    <fullName>ContactDate__c</fullName>
    <label>Data Ricontatto</label>
    <type>DateTime</type>
</CustomField>