force-app/main/default/objects/Lead/fields/CustomerCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerCode__c</fullName>
    <description>Codice Business Partner (BP) di SAP di ex clienti migrati</description>
    <label>Codice Cliente</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>