force-app/main/default/objects/Lead/fields/FileImportField3__c.field-meta.xml
<CustomField>
    <fullName>FileImportField3__c</fullName>
    <description>Utilizzati per import liste Lead (utilità solo informativa)</description>
    <label>Campo 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>