force-app/main/default/objects/Lead/fields/FiscalCode__c.field-meta.xml
<CustomField>
    <fullName>FiscalCode__c</fullName>
    <description>Se il record è migrato il controllo sul CF deve essere rilassato</description>
    <label>Codice Fiscale</label>
    <length>16</length>
    <type>Text</type>
</CustomField>