force-app/main/default/objects/Lead/fields/InterestArea__c.field-meta.xml
<CustomField>
    <fullName>InterestArea__c</fullName>
    <description>Gli interessi manifestati dal Lead</description>
    <label>Interessi Aggiuntivi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>InterestProduct__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_InterestArea</valueSetName>
    </valueSet>
</CustomField>