force-app/main/default/objects/Lead/fields/isSendToReitek__c.field-meta.xml
<CustomField>
    <fullName>isSendToReitek__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSendToReitek</label>
    <type>Checkbox</type>
</CustomField>