force-app/main/default/objects/Lead/fields/IsWrongFiscalData__c.field-meta.xml
<CustomField>
    <fullName>IsWrongFiscalData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valorizzato a true inibisce qualsiasi azione sul cliente</description>
    <label>Dati Fiscali Errati</label>
    <type>Checkbox</type>
</CustomField>