force-app/main/default/objects/Lead/fields/MobilePhonePrefix__c.field-meta.xml
<CustomField>
    <fullName>MobilePhonePrefix__c</fullName>
    <description>è il prefisso del Cellulare</description>
    <label>Prefisso Telefono Cellulare</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_PhonePrefix</valueSetName>
    </valueSet>
</CustomField>