force-app/main/default/objects/Lead/fields/NonConversionReason__c.field-meta.xml
<CustomField>
    <fullName>NonConversionReason__c</fullName>
    <description>È una picklist che si abilita solo se lo status del Lead è non convertito</description>
    <label>Motivo Non Conversione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Già Cliente</fullName>
            </value>
            <value>
                <fullName>Da poco con altro Gestore</fullName>
            </value>
            <value>
                <fullName>Cliente non coperto rete gas</fullName>
            </value>
            <value>
                <fullName>Non interessato all&apos;offerta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>