force-app/main/default/objects/Lead/fields/PhonePrefix__c.field-meta.xml
<CustomField>
    <fullName>PhonePrefix__c</fullName>
    <description>è il prefisso del telefono</description>
    <label>Prefisso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_PhonePrefix</valueSetName>
    </valueSet>
</CustomField>