force-app/main/default/objects/Lead/fields/Portion__c.field-meta.xml
<CustomField>
    <fullName>Portion__c</fullName>
    <description>Utilizzati per import liste Lead</description>
    <label>Frazione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>