force-app/main/default/objects/Lead/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <label>Categoria Merceologica</label>
    <length>80</length>
    <type>Text</type>
</CustomField>