force-app/main/default/objects/Lead/fields/StreetCode__c.field-meta.xml
<CustomField>
    <fullName>StreetCode__c</fullName>
    <label>Codice Via Stradario SAP [Residenziale/S</label>
    <length>30</length>
    <type>Text</type>
</CustomField>