force-app/main/default/objects/Lead/fields/StreetName__c.field-meta.xml
<CustomField>
    <fullName>StreetName__c</fullName>
    <label>Via [Residenziale/Sede Legale]</label>
    <length>200</length>
    <type>Text</type>
</CustomField>