force-app/main/default/objects/Lead/fields/StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>StreetNumber__c</fullName>
    <label>Civico [Residenziale/Sede Legale]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>