force-app/main/default/objects/Lead/fields/StreetNumberExtension__c.field-meta.xml
<CustomField>
    <fullName>StreetNumberExtension__c</fullName>
    <label>Estens.Civico [Residenziale/Sede Legale]</label>
    <length>15</length>
    <type>Text</type>
</CustomField>