force-app/main/default/objects/Lead/fields/SubscriptionCategory__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionCategory__c</fullName>
    <description>Utilizzati per import liste Lead (utilità solo informativa)</description>
    <label>Categoria Abbonamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>