force-app/main/default/objects/Lead/fields/UpperChannelAgency__c.field-meta.xml
<CustomField>
    <fullName>UpperChannelAgency__c</fullName>
    <label>Canale Superiore Agenzia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>