force-app/main/default/objects/Lead/fields/VATNumber__c.field-meta.xml
<CustomField>
    <fullName>VATNumber__c</fullName>
    <description>Partita IVA</description>
    <externalId>true</externalId>
    <label>Partita IVA</label>
    <length>11</length>
    <type>Text</type>
</CustomField>