force-app/main/default/objects/Lead/fields/WebFormField07__c.field-meta.xml
<CustomField>
    <fullName>WebFormField07__c</fullName>
    <description>Campo Libero Utilizzato nel WebForm dei Lead</description>
    <label>Campo Web 7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>