force-app/main/default/objects/Lead/fields/WebFormField11__c.field-meta.xml
<CustomField>
    <fullName>WebFormField11__c</fullName>
    <description>Campo Libero Utilizzato nel WebForm dei Lead</description>
    <label>Campo Web 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>