force-app/main/default/objects/Lead/fields/WebFormField12__c.field-meta.xml
<CustomField>
    <fullName>WebFormField12__c</fullName>
    <description>Campo Libero Utilizzato nel WebForm dei Lead</description>
    <label>Campo Web 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>