force-app/main/default/objects/Lead/recordTypes/HDT_Main.recordType-meta.xml
<RecordType>
    <fullName>HDT_Main</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Principale</label>
</RecordType>