force-app/main/default/objects/Lead/recordTypes/HDT_RT_CreazioneManuale.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_CreazioneManuale</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Creazione Manuale</label>
</RecordType>