force-app/main/default/objects/Lead/recordTypes/HDT_RT_Main.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Main</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Principale</label>
    </picklistValues>
</RecordType>