force-app/main/default/objects/Lead/validationRules/Check_Contatti_Obbligatori.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Contatti_Obbligatori</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(AND(CONTAINS($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipUsernames__c,$User.Username),OR(ISBLANK($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipDueDateTime__c),DATETIMEVALUE(NOW()) &lt; DATETIMEVALUE($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipDueDateTime__c)))),NOT(OR(ISPICKVAL(LeadSource, &quot;Facebook&quot;),ISPICKVAL(LeadSource, &quot;Instagram&quot;),ISPICKVAL(LeadSource, &quot;Twitter&quot;),ISPICKVAL(LeadSource, &quot;YouTube&quot;))),ISBLANK(MobilePhone),AND(ISBLANK(Email),ISBLANK(Phone)))</errorConditionFormula>
    <errorMessage>Deve essere popolato uno dei seguenti campi : “Cellulare” , “Email”,&quot;Telefono Fisso&quot;</errorMessage>
</ValidationRule>