force-app/main/default/objects/Lead/validationRules/Check_Lunghezza_Mobile_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Lunghezza_Mobile_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(CONTAINS($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipUsernames__c,$User.Username), OR(ISBLANK($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipDueDateTime__c),DATETIMEVALUE(NOW()) &lt; DATETIMEVALUE($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipDueDateTime__c))),false,
    IF(ISBLANK(MobilePhone),false, if(REGEX(MobilePhone, &quot;^[0-9]{9,12}$&quot;),false,true)))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Lunghezza Numero Cellulare Deve essere di minimo 9 e massimo 12 cifre</errorMessage>
</ValidationRule>