force-app/main/default/objects/Lead/validationRules/Check_Mobile_First_Digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Mobile_First_Digit</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(CONTAINS($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipUsernames__c,$User.Username), OR(ISBLANK($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipDueDateTime__c),DATETIMEVALUE(NOW()) &lt; DATETIMEVALUE($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipDueDateTime__c))),false,
    IF(ISBLANK(MobilePhone),false,
        IF(ISPICKVAL(MobilePhonePrefix__c,&apos;+39&apos;),
            IF(BEGINS(MobilePhone,&apos;3&apos;), false, true),
        false)))</errorConditionFormula>
    <errorMessage>Il numero di cellulare deve iniziare con il numero 3 solo se il prefisso è +39</errorMessage>
</ValidationRule>