force-app/main/default/objects/Lead/validationRules/Check_Name_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Name_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	NOT(
		AND(
			CONTAINS($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipUsernames__c,$User.Username), 
			OR(ISBLANK($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipDueDateTime__c),DATETIMEVALUE(NOW()) &lt; DATETIMEVALUE($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipDueDateTime__c))
		)
	),
	AND(ISBLANK(FirstName),  NOT(ISPICKVAL(CustomerMarking__c, &apos;Azienda&apos;)))
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Inserire il nome</errorMessage>
</ValidationRule>