force-app/main/default/objects/Lead/validationRules/Check_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(CONTAINS($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipUsernames__c,$User.Username), OR(ISBLANK($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipDueDateTime__c),DATETIMEVALUE(NOW()) &lt; DATETIMEVALUE($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Lead.SkipDueDateTime__c))),false,
    IF(ISBLANK(Phone),false, if(AND(BEGINS(Phone,&apos;0&apos;) ,REGEX(Phone, &quot;^[0-9]{6,11}$&quot;)),false,true)))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Lunghezza Numero Fisso Deve essere di minimo 6 e massimo 11 cifre e deve iniziare con &quot;0&quot;</errorMessage>
</ValidationRule>