force-app/main/default/objects/Lead/validationRules/Unlock_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Unlock_Error</fullName>
    <active>true</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>Errore</errorMessage>
</ValidationRule>