force-app/main/default/objects/Lead/listViews/HDT_QUE_Creati_Srl_Lead.listView-meta.xml
<ListView>
    <fullName>HDT_QUE_Creati_Srl_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Agenzia Creati Srl</label>
    <queue>HDT_QUE_Creati_Srl</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>