force-app/main/default/objects/Lead/listViews/HDT_QUE_DataCompany_Lead.listView-meta.xml
<ListView>
    <fullName>HDT_QUE_DataCompany_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Agenzia DataCompany</label>
    <queue>HDT_QUE_DataCompany</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>