force-app/main/default/objects/Lead/listViews/HDT_QUE_Global_Lead.listView-meta.xml
<ListView>
    <fullName>HDT_QUE_Global_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Agenzia Global</label>
    <queue>HDT_QUE_Global</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>