force-app/main/default/objects/Lead/listViews/HDT_QUE_MasSrl_Lead.listView-meta.xml
<ListView>
    <fullName>HDT_QUE_MasSrl_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Agenzia Mas Srl</label>
    <queue>HDT_QUE_MasSrl</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>