force-app/main/default/objects/Lead/listViews/HDT_QUE_SeeProgressum_Lead.listView-meta.xml
<ListView>
    <fullName>HDT_QUE_SeeProgressum_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Agenzia SeeProgressum</label>
    <queue>HDT_QUE_SeeProgressum</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <portalRoleAndSubordinates>SeeProgressumDirigentePartner</portalRoleAndSubordinates>
    </sharedTo>
</ListView>